--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,45 @@
-version: '3.6'
+version: '3'
 services:
-  nginx:
-    image: nginx:latest
-    container_name: nginx-proxy
-    ports:
-      - '80:80'
-      - '443:443'
-    volumes:
-      - ./nginx/default.conf:/tmp/default.template
-      - ./src:/var/www/html:rw,cached
-    depends_on:
-      - app
-    restart: always
-    entrypoint: /bin/bash -c 'cat /tmp/default.template | sed "s/\\\$$domain/${DOMAIN}/g" > /etc/nginx/conf.d/default.conf && nginx -g "daemon off;"'
-    links:
-      - app
+   db:
+     image: percona:8
+     container_name: db
+     restart: always
+     environment:
+       MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+       MYSQL_DATABASE: "${DB_NAME}"
+       MYSQL_USER: "${APP_USERNAME}"
+       MYSQL_PASSWORD: "${APP_USERNAME_PASSWORD}"
 
-  db:
-    image: percona:8
-    container_name: db-mysql
-    volumes:
-       - './data/db:/var/lib/mysql:delegated'
-    environment:
-      MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
-      MYSQL_DATABASE: "${DB_NAME}"
-    restart: always
-    ports:
-      - '3306:3306'
+   app:
+     image: wordpress:latest
+     container_name: app
+     restart: always
+     environment:
+       WORDPRESS_DB_HOST: db:3306
+       WORDPRESS_DB_USER: "${APP_USERNAME}"
+       WORDPRESS_DB_PASSWORD: "${APP_USERNAME_PASSWORD}"
+       WORDPRESS_DB_NAME: "${DB_NAME}"
+     depends_on:
+       - db
+     links:
+       - db
 
-  app:
-    image: wordpress:latest 
-    container_name: app
-    ports:
-      - 80
-    volumes:
-      - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
-      - ./wp-app:/var/www/html
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_NAME: "${DB_NAME}"
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
-    depends_on:
-      - db
-    links:
-      - db
+   nginx:
+     image: nginx:latest
+     container_name: nginx
+     volumes:
+       - ./nginx/default.conf:/tmp/default.template
+     depends_on:
+       - app
+     restart: always
+     entrypoint: /bin/bash -c 'cat /tmp/default.template | sed "s/\\\$$domain/${DOMAIN}/g" > /etc/nginx/conf.d/default.conf && nginx -g "daemon off;"'
+     build:
+       context: .
+       dockerfile: Dockerfile-nginx
+     ports:
+       - "80:80"
+     depends_on:
+       - app
+     links:
+       - app
+    
