--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,53 +1,16 @@
 server {
-    listen      80;
-    listen [::]:80;
-    server_name $domain www.$domain;
-
-    root /var/www/html/web;
-    index index.php;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    ssl_certificate           /etc/certs/$domain.crt;
-    ssl_certificate_key       /etc/certs/$domain.key;
-
-    gzip on;
-    gzip_http_version 1.0;
-    gzip_disable "msie6";
-        gzip_vary on;
-        gzip_proxied any;
-        gzip_comp_level 6;
-        gzip_buffers 16 8k;
-        gzip_min_length 256;
-  gzip_types
-    text/css
-    text/javascript
-    text/xml
-    text/plain
-    text/x-component
-    application/javascript
-    application/json
-    application/xml
-    application/rss+xml
-    font/truetype
-    font/opentype
-    application/vnd.ms-fontobject
-    image/svg+xml;
-
-    client_max_body_size 100M;
+    listen            80;
+    listen       [::]:80;
+    server_name  localhost;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
+        proxy_read_timeout    90;
+        proxy_connect_timeout 90;
+        proxy_redirect        off;
+        proxy_pass http://app;
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        proxy_set_header      X-Real-IP $remote_addr;
+        proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header      Host $host;
     }
 }
